--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Webpage Title</title>
+    <title>Chicane Type Tester</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
